@@ -1,3 +1,9 @@
+2012-01-26 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Tests/TestDKArgument.m: Add test for XML generation of arguments.
+	* Source/DKArgument.h
+	* Source/DKArgument.m: Small tweaks to XML generation.
+
 2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* configure.ac: Improve last commit.
